FIx sidebar readability

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -107,6 +107,7 @@
 }
 
 .sidebar-button {
+    -fx-font-size: 18px;
     -fx-background-color: #D0E6FF;
     -fx-text-fill: #004080;
     -fx-border-color: #d8d8d8;
